Collapsing Pages Changelog

0.2.1 (2008.05.01)
  * Link now spans the whole dropdown
  * Now indicates the presence of an additional submenu (doesn't work in IE 6
    or less)

0.2 (2008.04.30)
  * Now includes the possibility of providing a drop-down menu of pages and
    sub-pages, instead of a nested list. Only useful for a header navigation 

0.1.1 (2008.04.25)
  * Can exclude pages (and sub-pages of those pages)

0.1 (2008.04.23):
	* Initial Release