@@ -1,5 +1,5 @@
 /*
-collapsPage Pages version: 0.2
+collapsPage Pages version: 0.2.1
 Copyright 2007 Robert Felty
 
 This work is largely based on the Fancy Pages plugin by Andrew Rader
