@@ -4,7 +4,7 @@ Plugin Name: Collapsing Pages
 Plugin URI: http://blog.robfelty.com/plugins
 Description: Uses javascript to expand and collapse pages to show the posts that belong to the page 
 Author: Robert Felty
-Version: 0.2
+Version: 0.2.1
 Author URI: http://robfelty.com
 Tags: sidebar, widget, pages, pages
 
@@ -74,7 +74,7 @@ class collapsPage {
     </style>\n";
 		echo "<script type=\"text/javascript\">\n";
 		echo "// <![CDATA[\n";
-		echo "// These variables are part of the Collapsing Pages Plugin version: 0.2\n// Copyright 2007 Robert Felty (robfelty.com)\n";
+		echo "// These variables are part of the Collapsing Pages Plugin version: 0.2.1\n// Copyright 2007 Robert Felty (robfelty.com)\n";
     echo "function expandPage( e ) {
     if( e.target ) {
       src = e.target;
